# cpplogger

./: CMakeLists.txt  README.md
release/: CMakeLists.txt
release/include/cpplogger/: cpplogger.h
release/src/: CMakeLists.txt  cpplogger.cpp
release/tests/: CMakeLists.txt  main_test.cpp
release/tests/parallel/: CMakeLists.txt  main_test.cpp
release/tests/serial/: CMakeLists.txt  main_test.cpp
release/tools/: build.bash  build.bat
src/: cpplogger.cpp
